2006-05-14 10:30  ntiffin

	* MyOutlineView.h, MyOutlineView.m, SqlDocument.h, SqlDocument.m:
	  Add table SQL generation commands and stubs for columns, indexes,
	  functions, and views.

2006-05-13 15:20  ntiffin

	* ChangeLog: Update ChangeLog.

2006-05-13 14:28  ntiffin

	* English.lproj/: MainMenu~.nib/classes.nib,
	  MainMenu~.nib/info.nib, MainMenu~.nib/objects.nib,
	  SqlDocument~.nib/classes.nib, SqlDocument~.nib/info.nib,
	  SqlDocument~.nib/keyedobjects.nib: Remove backup files from cvs.

2006-05-13 14:26  ntiffin

	* .DS_Store, ChangeLog, MyOutlineView.h, MyOutlineView.m,
	  SqlDocument.h, SqlDocument.m, English.lproj/.DS_Store,
	  English.lproj/Credits.rtf,
	  English.lproj/SqlDocument.nib/classes.nib,
	  English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: Update to sync
	  after sourceforge cvs outage, and add schema browser files.

2006-05-07 12:42  ntiffin

	* ChangeLog, SqlDocument.h, SqlDocument.m,
	  English.lproj/SqlDocument.nib/classes.nib,
	  English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: Add schema
	  browser.

2006-01-16 10:33  hawkmoon

	* SqlDocument.m, English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: No log message.

2006-01-10 12:17  hawkmoon

	* Query Tool for Postgres.xcodeproj/project.pbxproj, Info.plist,
	  SqlDocument.h, SqlDocument.m, connect_dlg.png: Added *VERY* basic
	  syntax highlighting, to be expanded

2005-12-11 18:22  hawkmoon

	* SqlDocument.h, SqlDocument.m, SqlToolbarCategory.m,
	  English.lproj/MainMenu.nib/info.nib,
	  English.lproj/MainMenu.nib/objects.nib, Query Tool for
	  Postgres.xcodeproj/project.pbxproj,
	  English.lproj/SqlDocument.nib/classes.nib,
	  English.lproj/SqlDocument.nib/info.nib,
	  English.lproj/SqlDocument.nib/keyedobjects.nib: Removed Syntax
	  Highlighting Added Toolbar Database selector

2005-12-01 20:59  hawkmoon
